# ew

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  build.rs  cert.pem  jp-logs1.txt  key.pem  logs3.txt  logs4.txt  readme.md
.forgejo/workflows/: docker.yml  release.yml
.github/workflows/: docker.yml  rust.yml
asset_server/: index.js  package-lock.json
docker/: Dockerfile  docker-compose.yml  start.sh
logs/: ios-jp.txt  logs.txt  logs2.txt
src/: android.rs  database.rs  encryption.rs  ios.rs  lib.rs  log.c  macros.rs  main.rs  options.rs  router.rs  runtime.rs  sql.rs  static_handlers.rs
src/database/: custom_song.rs  gree.rs
src/router/: asset_lists.rs  card.rs  chat.rs  clear_rate.rs  clear_rate_template.html  clearrate.json  custom_song.rs  debug.rs  event.rs  event_ranking.rs  exchange.rs  file_lists.rs  friend.rs  global.rs  gree.rs  home.rs  items.rs  live.rs  location.rs  login.rs  lottery.rs  master_data.rs  mission.rs  notice.rs  purchase.rs  serial_code.rs  shop.rs  start.rs  story.rs  tutorial.rs  user.rs  web.rs  webui.rs
src/router/custom_song/: audio.rs  chart.rs  package.rs
src/router/databases/: csv.rs  mod.rs  schemas.json
src/router/databases/csv/: album_multi_unit_m.csv  album_series_m.csv  album_unit_series_m.csv  beginner_mission_reward_setting.csv  billing_shop.csv  billing_subscription.csv  card_level.csv  card_sys_voice.csv  character_sys_voice.csv  chat_character.csv  chipster_result_code.csv  comic.csv  dialog.csv  event_member_ranking.csv  event_point.csv  event_point_ranking.csv  event_story.csv  event_top_banner.csv  evolve_item_condition.csv  exchange_item.csv  exchange_item_reward.csv  gamelib_result_code.csv  home_banner.csv  live_combo.csv  live_effect_value.csv  live_mission.csv  live_mission_combo.csv  live_rule.csv  live_tap_effect.csv  live_tap_se.csv  location.csv  lottery.csv  lottery_caution.csv  lottery_eff_movie_ratio.csv  lottery_image.csv  lottery_info.csv  lottery_item.csv  lottery_price.csv  lottery_rarity.csv  membership_wallpaper.csv  (+15 more)
src/router/databases/csv-en/: adjust_tracking_list.csv  album_member_tag_m.csv  album_multi_unit_m.csv  album_series_m.csv  album_series_thumbnail_asset_m.csv  album_unit_m.csv  album_unit_type_member_tag_m.csv  beginner_mission.csv  beginner_mission_reward.csv  bgm.csv  billing_product.csv  billing_product_reward.csv  billing_shop.csv  billing_subscription.csv  card.csv  card_evolve.csv  card_evolve_condition.csv  card_skill_level.csv  card_sys_voice.csv  character.csv  character_group.csv  character_sys_voice.csv  chat_attachment.csv  chat_chapter.csv  chat_character.csv  chat_reward.csv  chat_room.csv  chat_stamp.csv  comic.csv  const.csv  date_condition.csv  dialog.csv  dialog_button.csv  event.csv  event_card_bonus.csv  event_live.csv  event_member_ranking.csv  event_member_ranking_reward.csv  event_point.csv  event_point_ranking.csv  (+82 more)
src/router/databases/json/: card.json  card_evolve.json  (+14 more)
src/router/file_lists/: Bundle.json  Movie.json  Sound.json  title_screen.json
src/router/json/: chat_chapter.json  exchange_item_reward.json  live_mission.json  login_bonus.json  login_bonus_reward.json  mission.json  mission_reward.json  shop_item.json
src/router/lottery/: lottery_item.json  lottery_price.json  mod.rs
src/router/tools/: guest.rs  mod.rs
src/router/userdata/: chat_missions.json  full_sif.json  missions.json  mod.rs  new_user.json  new_user_event.json  new_user_home.json  update_table.sql  user_rank.json
src/router/webui/: cards.json  item.json  login_bonus.json
webui/: index.html  package-lock.json  package.json  vite.config.js
webui/src/: Request.jsx  main.jsx
webui/src/admin/: Admin.css  Admin.jsx
webui/src/help/: Help.jsx
webui/src/home/: Home.css  Home.jsx
webui/src/import/: Import.css  Import.jsx
webui/src/login/: Login.css  Login.jsx
(+250 files in other folders)
