[package]
name = "ew"
version = "1.0.0"
edition = "2024"

[dependencies]
actix-web = "4.12"
rusqlite = { version = "0.37.0", features = ["bundled"] }
reqwest = { version = "0.12", features = ["blocking"] }
clap = { version = "4.5.37", features = ["derive"]}
base64 = "0.22.1"
json = "0.12.4"
rand = "0.9.2"
lazy_static = "1.5.0"
chrono = "0.4.42"
hex = "0.4.3"
hmac = "0.12.1"
md5 = "0.8.0"
urlencoding = "2.1.3"
sha1 = "0.10.6"
substring = "1.4.5"
uuid = { version = "1.18.1", features = ["v7"] }
rsa = { version = "0.9.9", features = ["sha1"] }
mime = "0.3.17"
sha2 = "0.10.9"
include-flate-codegen = "0.3.1"
libflate = "2.2.1"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
cbc = { version = "0.1.2", features = ["alloc"] }
aes = "0.8.4"
pem = "3.0.6"
