[package]
name = "ew"
version = "1.0.0"
edition = "2024"

[dependencies]
actix-web = "4.13"
rusqlite = { version = "0.38.0", features = ["bundled"] }
clap = { version = "4.5.59", features = ["derive"]}
base64 = "0.22.1"
json = "0.12.4"
rand = "0.10.0"
lazy_static = "1.5.0"
hex = "0.4.3"
hmac = "0.12.1"
md5 = "0.8.0"
urlencoding = "2.1.3"
sha1 = "0.10.6"
substring = "1.4.5"
uuid = { version = "1.21.0", features = ["v7"] }
rsa = { version = "0.9.10", features = ["sha1"] }
mime = "0.3.17"
sha2 = "0.10.9"
include-flate-codegen = "0.3.1"
libflate = "2.2.1"
cbc = { version = "0.1.2", features = ["alloc"] }
aes = "0.8.4"
pem = "3.0.6"
ureq = "3.2.0"
mime_guess = "2.0.5"
include_dir = "0.7.4"

[target.aarch64-linux-android.dependencies]
jni = { version = "0.22.0", features = ["invocation", "default"], optional = true }

[target.aarch64-apple-ios.dependencies]
objc2 = { version = "0.6.3", optional = true }
objc2-foundation = { version = "0.3.2", features = ["NSFileManager"], optional = true }

[build-dependencies]
cc = "1.2"

# To enable this library you MUST comment out lib block below and add --features library
[features]
library = ["jni", "objc2", "objc2-foundation"]

#[lib]
#crate-type = ["cdylib"]
#required-features = ["library"]
