[package]
name = "ew"
version = "1.1.0"
edition = "2024"

[dependencies]
actix-web = "4.13"
rusqlite = { version = "0.39.0", features = ["bundled"] }
clap = { version = "4.5.59", features = ["derive"]}
base64 = "0.22.1"
rand = "0.10.0"
lazy_static = "1.5.0"
hex = "0.4.3"
hmac = "0.13.0"
md5 = "0.8.0"
urlencoding = "2.1.3"
sha1 = "0.11.0"
uuid = { version = "1.21.0", features = ["v7"] }
# This needs to be on 0.10.* to be able to bump other crates. This is probably fine
rsa = { version = "0.10.0-rc.18", features = ["sha1"] }
mime = "0.3.17"
sha2 = "0.11.0"
include-flate-codegen = "0.3.1"
libflate = "2.2.1"
cbc = { version = "0.2.0", features = ["alloc"] }
aes = "0.9.0"
pem = "3.0.6"
ureq = "3.2.0"
mime_guess = "2.0.5"
include_dir = "0.7.4"
jzon = "0.12.5"
csv = "1.3"
actix-multipart = "0.8"
futures-util = "0.3"
image = "0.25"
zip = { version = "8.6", default-features = false, features = ["deflate"] }
symphonia = { version = "0.6", default-features = false, features = ["ogg", "vorbis", "mp3", "wav", "pcm"] }
vorbis_rs = "0.5"
argon2 = { version = "0.5.3", features = ["std"] }
rand_core = "0.10"

[target.aarch64-linux-android.dependencies]
jni = { version = "0.21", features = ["invocation", "default"], optional = true }

[target.aarch64-apple-ios.dependencies]
objc2 = { version = "0.6.3", optional = true }
objc2-foundation = { version = "0.3.2", features = ["NSFileManager"], optional = true }

[build-dependencies]
cc = "1.2"

# To enable this library you MUST comment out lib block below and add --features library
[features]
library = ["jni", "objc2", "objc2-foundation"]

#[lib]
#crate-type = ["cdylib"]
#required-features = ["library"]
